# iscore-addon-tutorial

./: CMakeLists.txt  addon.json  iscore_addon_tutorial.cpp  iscore_addon_tutorial.hpp  score_addon_tutorial.cpp  score_addon_tutorial.hpp
Tutorial/ApplicationPlugin/: TutorialApplicationPlugin.cpp  TutorialApplicationPlugin.hpp
Tutorial/Commands/: AddBanana.cpp  AddBanana.hpp  AddEntity.cpp  AddEntity.hpp  TutorialCommandFactory.hpp
Tutorial/DocumentPlugin/: TutorialDocumentPlugin.cpp  TutorialDocumentPlugin.hpp
Tutorial/Panel/: TutorialPanelDelegate.cpp  TutorialPanelDelegate.hpp
Tutorial/PolymorphicElement/: PolymorphicElement.cpp  PolymorphicElement.hpp  PolymorphicElementFactory.cpp  PolymorphicElementFactory.hpp
Tutorial/PolymorphicElement/Implementation/: ConcretePolymorphicElement.cpp  ConcretePolymorphicElement.hpp
Tutorial/PolymorphicEntity/: PolymorphicEntity.cpp  PolymorphicEntity.hpp  PolymorphicEntityFactory.cpp  PolymorphicEntityFactory.hpp
Tutorial/PolymorphicEntity/Implementation/: ConcretePolymorphicEntity.cpp  ConcretePolymorphicEntity.hpp
Tutorial/Process/: TutorialProcessFactory.hpp  TutorialProcessMetadata.hpp  TutorialProcessModel.cpp  TutorialProcessModel.hpp
Tutorial/Process/Executor/: TutorialProcessExecutor.cpp  TutorialProcessExecutor.hpp
Tutorial/Process/Inspector/: TutorialProcessInspector.cpp  TutorialProcessInspector.hpp
Tutorial/Process/Layer/: TutorialProcessLayer.hpp  TutorialProcessLayerFactory.hpp  TutorialProcessPresenter.cpp  TutorialProcessPresenter.hpp  TutorialProcessView.cpp  TutorialProcessView.hpp
Tutorial/Process/LocalTree/: TutorialProcessLocalTree.cpp  TutorialProcessLocalTree.hpp
Tutorial/SimpleElement/: SimpleElement.cpp  SimpleElement.hpp  SimpleEntity.cpp  SimpleEntity.hpp
resources/: Tutorial.qrc  TutorialPanel.qml  TutorialProcess.qml
